--- a/invitation.html
+++ b/invitation.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Invitation - Eva & Samuel</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;0,700;1,400&family=Great+Vibes&display=swap" rel="stylesheet">
@@ -16,39 +16,39 @@
             --line-color: rgba(212, 165, 165, 0.25);
         }
 
-        /* Correction pour l'affichage du fond sur Mobile */
+        /* RESET MOBILE */
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+
         html, body {
             margin: 0;
             padding: 0;
             width: 100%;
             min-height: 100%;
+            background-color: var(--white-cream);
             font-family: 'Cormorant Garamond', serif;
             color: var(--text-dark);
-            background-color: var(--white-cream);
         }
 
-        /* --- FOND CONTINU (FIXÉ ET RÉPÉTÉ) --- */
-        body::before {
-            content: "";
+        /* --- FOND CONTINU : CORRECTIF MOBILE --- */
+        #fixed-bg {
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('continue.JPG');
-            background-repeat: repeat; /* Répétition infinie */
-            background-size: 200px; /* Taille du motif réduite pour mobile */
-            opacity: 0.15; /* Opacité ajustée pour être visible mais discrète */
+            width: 100vw;
+            height: 100vh;
+            /* On utilise une div séparée pour éviter les bugs de scroll Safari */
+            background-image: url('continue.JPG'); 
+            background-repeat: repeat;
+            background-size: 180px; 
+            opacity: 0.18;
             z-index: -1;
             pointer-events: none;
-            display: block !important; /* Force l'affichage */
+            display: block !important;
         }
 
-        /* Barre de Navigation */
         .navbar {
             position: fixed;
             top: 0;
-            left: 0;
             width: 100%;
             height: 60px;
             background-color: rgba(255, 253, 249, 0.96);
@@ -57,41 +57,22 @@
             align-items: center;
             z-index: 1000;
             border-bottom: 1px solid var(--line-color);
-            backdrop-filter: blur(5px);
-            -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
         }
 
-        .nav-links {
-            display: flex;
-            gap: 15px;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: var(--text-gray);
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            font-size: 0.65rem;
-        }
+        .nav-links { display: flex; gap: 12px; list-style: none; padding: 0; margin: 0; }
+        .nav-links a { text-decoration: none; color: var(--text-gray); text-transform: uppercase; font-size: 0.65rem; letter-spacing: 1px; }
 
         .page-wrapper {
-            box-sizing: border-box;
             padding: 90px 15px 40px 15px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            position: relative;
-            z-index: 10;
+            width: 100%;
         }
 
-        .main-frame {
-            width: 100%;
-            max-width: 800px;
-            text-align: center;
-        }
+        .main-frame { width: 100%; max-width: 600px; text-align: center; }
 
         .names {
             font-family: 'Great Vibes', cursive;
@@ -102,54 +83,51 @@
 
         .hero-photo, .section-photo {
             width: 100%;
-            max-width: 550px;
-            height: auto;
+            max-width: 500px;
             border: 1px solid var(--line-color);
-            padding: 8px;
-            background: white;
+            padding: 6px;
+            background: #ffffff;
             margin: 20px 0;
-            box-sizing: border-box;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
         }
 
-        /* --- CARDS AVEC BORDURES ET FOND BLANC --- */
+        /* --- CARDS : CORRECTIF BORDURES & IMAGE DROITE --- */
         .event-card {
-            background: white;
-            border: 2px solid var(--rose-prestige); /* Bordure rose bien visible */
+            background-color: #ffffff;
+            border: 2px solid var(--rose-prestige) !important; /* Force la bordure */
             padding: 30px 20px;
             margin: 20px 0;
             width: 100%;
-            max-width: 500px;
             position: relative;
             overflow: hidden;
-            box-sizing: border-box;
-            background-image: url('droite.JPG');
-            background-repeat: no-repeat;
-            background-position: bottom right;
-            background-size: 120px;
+            /* Forcer l'affichage de droite.JPG */
+            background-image: url('droite.JPG') !important;
+            background-repeat: no-repeat !important;
+            background-position: bottom -10px right -10px !important;
+            background-size: 130px !important;
         }
 
-        /* Voile blanc interne pour la lisibilité */
-        .event-card::after {
+        /* Voile blanc pour assurer la lecture du texte sur l'image droite.JPG */
+        .event-card::before {
             content: '';
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
             background: rgba(255, 255, 255, 0.88);
-            z-index: 0;
+            z-index: 1;
         }
 
-        .event-card > * { position: relative; z-index: 1; }
+        .event-card > * { position: relative; z-index: 2; }
 
-        .form-container { width: 100%; max-width: 500px; margin-top: 30px; text-align: left; }
-
-        input, select, textarea {
+        .form-container { width: 100%; margin-top: 30px; text-align: left; }
+        input, select {
             width: 100%;
-            padding: 12px;
+            padding: 14px;
             border: 1px solid var(--line-color);
-            background: white;
             font-family: 'Cormorant Garamond', serif;
             margin-bottom: 15px;
             border-radius: 0;
-            -webkit-appearance: none; /* Correction bug affichage select sur iPhone */
+            font-size: 16px; /* Évite le zoom automatique sur iPhone */
+            -webkit-appearance: none;
         }
 
         .btn-rsvp {
@@ -160,72 +138,71 @@
             width: 100%;
             text-transform: uppercase;
             letter-spacing: 2px;
-            cursor: pointer;
-            font-weight: 600;
+            font-weight: bold;
         }
 
-        /* Media Query pour forcer le fond sur tous les mobiles */
-        @media (max-width: 768px) {
-            body::before {
-                background-size: 150px; /* Plus petit pour mobile */
-                opacity: 0.2; /* Un peu plus fort sur mobile pour être sûr de le voir */
-            }
-            .event-card {
-                padding: 25px 15px;
-                border: 1.5px solid var(--rose-prestige);
-            }
+        @media (min-width: 768px) {
+            .navbar { height: 80px; }
+            .nav-links { gap: 30px; }
+            .nav-links a { font-size: 0.8rem; }
+            .main-frame { max-width: 800px; }
+            #fixed-bg { background-size: 250px; opacity: 0.12; }
         }
     </style>
 </head>
 <body>
 
-<nav class="navbar">
-    <ul class="nav-links">
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#mairie">Mairie</a></li>
-        <li><a href="#houppa">Houppa</a></li>
-        <li><a href="#rsvp">Présence</a></li>
-    </ul>
-</nav>
+    <div id="fixed-bg"></div>
 
-<div class="page-wrapper" id="accueil">
-    <div class="main-frame">
-        <img src="logo.JPG" alt="Logo" style="width: 70px;">
-        <h1 class="names">Eva & Samuel</h1>
+    <nav class="navbar">
+        <ul class="nav-links">
+            <li><a href="#accueil">Accueil</a></li>
+            <li><a href="#mairie">Mairie</a></li>
+            <li><a href="#houppa">Houppa</a></li>
+            <li><a href="#rsvp">Présence</a></li>
+        </ul>
+    </nav>
 
-        <img src="nez.JPG" alt="Photo" class="hero-photo">
+    <div class="page-wrapper" id="accueil">
+        <div class="main-frame">
+            <img src="logo.JPG" alt="Logo" style="width: 70px; height: auto;">
+            
+            <h1 class="names">Eva & Samuel</h1>
 
-        <div style="font-size: 1.3rem; font-style: italic; margin: 20px 0 40px 0; line-height: 1.5;">
-            "C’est avec un bonheur immense que nous vous convions à célébrer notre union."
-        </div>
+            <img src="nez.JPG" alt="Eva & Samuel" class="hero-photo">
 
-        <div class="event-card" id="mairie">
-            <div style="text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem;">La Mairie</div>
-            <div style="font-size: 1.4rem; font-style: italic; margin: 10px 0;">11 Mai 2026 à 14h30</div>
-            <p style="margin: 0;">Mairie du 16ème, Paris.</p>
-        </div>
+            <p style="font-size: 1.3rem; font-style: italic; line-height: 1.6; margin: 20px 0;">
+                "C’est avec un immense bonheur que nous vous invitons à célébrer notre union."
+            </p>
 
-        <div class="event-card" id="houppa">
-            <div style="text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem;">La Houppa</div>
-            <div style="font-size: 1.4rem; font-style: italic; margin: 10px 0;">12 Mai 2026 à 17h00</div>
-            <p style="margin: 0;">Célébration de notre union religieuse.</p>
-        </div>
+            <div class="event-card" id="mairie">
+                <span style="text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem;">La Mairie</span>
+                <h2 style="font-size: 1.5rem; margin: 10px 0;">11 Mai 2026 • 14h30</h2>
+                <p>Mairie du 16ème, Paris</p>
+            </div>
 
-        <img src="verre.JPG" alt="Verre" class="section-photo">
+            <div class="event-card" id="houppa">
+                <span style="text-transform: uppercase; letter-spacing: 2px; font-size: 0.9rem;">La Houppa</span>
+                <h2 style="font-size: 1.5rem; margin: 10px 0;">12 Mai 2026 • 17h00</h2>
+                <p>Sous le ciel de Paris</p>
+            </div>
 
-        <div class="form-container" id="rsvp">
-            <h2 style="text-align: center; text-transform: uppercase; font-size: 1rem; margin-bottom: 25px;">Confirmer ma présence</h2>
-            <form>
-                <input type="text" placeholder="Nom & Prénom" required>
-                <select required>
-                    <option value="oui">Oui, avec plaisir</option>
-                    <option value="non">Non, avec regret</option>
-                </select>
-                <button type="submit" class="btn-rsvp">Envoyer ma réponse</button>
-            </form>
+            <img src="verre.JPG" alt="Célébration" class="section-photo">
+
+            <div class="form-container" id="rsvp">
+                <h3 style="text-align: center; text-transform: uppercase; letter-spacing: 2px;">Votre Présence</h3>
+                <form>
+                    <input type="text" placeholder="Nom & Prénom" required>
+                    <select required>
+                        <option value="" disabled selected>Serez-vous présent ?</option>
+                        <option value="oui">Oui, avec joie</option>
+                        <option value="non">Non, avec regret</option>
+                    </select>
+                    <button type="submit" class="btn-rsvp">Envoyer</button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
 </body>
 </html>
