--- a/invitation.html
+++ b/invitation.html
@@ -148,7 +148,7 @@
 
 <div class="page-wrapper" id="accueil">
     <div class="main-frame">
-        <img src="logo.JPG" alt="Logo" style="width: 80px;">
+        <img src="logo.png" alt="Logo" style="width: 80px;">
 
         <h1 class="names">Eva & Samuel</h1>
 
