--- a/invitation.html
+++ b/invitation.html
@@ -81,7 +81,7 @@
 
 <div class="page-wrapper" id="accueil">
     <div class="main-frame">
-        <img src="logo.png" alt="Logo" style="width: 80px;">
+        <img src="logoES.png" alt="Logo" style="width: 80px;">
         <h1 class="names">Eva & Samuel</h1>
         
         <img src="nez.JPG" alt="Eva & Samuel" class="hero-photo">
