--- a/invitation.html
+++ b/invitation.html
@@ -19,45 +19,50 @@
         #fixed-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: url('fond.JPG') repeat; background-size: 250px; opacity: 0.25; z-index: 0; pointer-events: none; }
 
         .navbar { position: fixed; top: 0; width: 100%; height: 60px; background-color: rgba(255, 253, 249, 0.98); display: flex; justify-content: center; align-items: center; z-index: 1000; border-bottom: 1px solid var(--line-color); backdrop-filter: blur(5px); }
-        .nav-links { display: flex; gap: 15px; list-style: none; padding: 0; margin: 0; }
-        .nav-links a { text-decoration: none; color: var(--text-gray); text-transform: uppercase; font-family: 'Montserrat', sans-serif; font-size: 0.65rem; letter-spacing: 2px; font-weight: 700; }
+        .nav-links { display: flex; gap: 10px; list-style: none; padding: 0; margin: 0; }
+        .nav-links a { text-decoration: none; color: var(--text-gray); text-transform: uppercase; font-family: 'Montserrat', sans-serif; font-size: 0.6rem; letter-spacing: 1px; font-weight: 700; }
 
-        .page-wrapper { position: relative; z-index: 10; padding: 80px 15px 40px 15px; display: flex; flex-direction: column; align-items: center; }
+        .page-wrapper { position: relative; z-index: 10; padding: 80px 10px 40px 10px; display: flex; flex-direction: column; align-items: center; }
         .main-frame { width: 100%; max-width: 600px; text-align: center; }
 
-        .names { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: clamp(3.5rem, 12vw, 5.5rem); margin: 10px 0; }
-        .section-title { font-family: 'Cormorant Garamond', serif; font-size: 2rem; text-transform: uppercase; letter-spacing: 4px; color: var(--text-dark); margin-bottom: 15px; }
+        .names { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: clamp(3rem, 10vw, 5.5rem); margin: 10px 0; }
+        .section-title { font-family: 'Cormorant Garamond', serif; font-size: 1.8rem; text-transform: uppercase; letter-spacing: 3px; color: var(--text-dark); margin-bottom: 10px; }
 
         .hero-photo, .section-photo { width: 100%; max-width: 500px; border: 2px solid white; padding: 5px; background: white; margin: 20px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
 
-        /* Style des textes soigné */
-        .sub-text { font-size: 1.4rem; font-style: italic; color: var(--text-gray); display: block; margin-bottom: 15px; }
-        .date-block { font-family: 'Cormorant Garamond', serif; font-size: 1.3rem; line-height: 1.4; margin-bottom: 20px; }
-        .date-line { font-weight: 700; text-transform: uppercase; letter-spacing: 2px; color: var(--text-dark); }
-        .venue-name { font-size: 1.6rem; font-weight: 700; color: var(--rose-prestige); margin-top: 10px; display: block; }
-        .address-text { font-style: italic; font-size: 1.1rem; color: var(--text-gray); }
+        .sub-text { font-size: 1.2rem; font-style: italic; color: var(--text-gray); display: block; margin-bottom: 10px; }
+        .date-block { font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; line-height: 1.4; margin-bottom: 15px; }
+        .date-line { font-weight: 700; text-transform: uppercase; letter-spacing: 1px; color: var(--text-dark); }
+        .venue-name { font-size: 1.4rem; font-weight: 700; color: var(--rose-prestige); margin-top: 5px; display: block; }
+        .address-text { font-style: italic; font-size: 1rem; color: var(--text-gray); }
 
-        .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 40px 20px; margin: 30px 0; width: 100%; position: relative; box-shadow: 0 10px 30px rgba(0,0,0,0.03); }
+        .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 30px 15px; margin: 20px 0; width: 100%; position: relative; }
 
-        /* Grille des familles optimisée */
-        .family-grid { display: flex; justify-content: space-between; gap: 20px; margin-bottom: 30px; text-align: center; border-bottom: 1px solid var(--line-color); padding-bottom: 25px; }
-        .family-col { flex: 1; }
-        .family-col h3 { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: 1.8rem; margin-bottom: 10px; font-weight: normal; }
-        .family-col p { font-size: 0.95rem; margin: 4px 0; color: var(--text-dark); line-height: 1.4; }
-        .family-label { font-weight: 700; text-transform: uppercase; font-size: 0.7rem; letter-spacing: 1px; color: var(--text-gray); display: block; margin-top: 10px; }
+        /* --- FORCE DEUX COLONNES MOBILE --- */
+        .family-grid { 
+            display: flex; 
+            justify-content: space-between; 
+            gap: 10px; 
+            margin-bottom: 25px; 
+            text-align: center; 
+            border-bottom: 1px solid var(--line-color); 
+            padding-bottom: 20px; 
+        }
+        .family-col { flex: 1; min-width: 0; } /* min-width 0 évite que le contenu ne déborde */
+        
+        .family-col h3 { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: 1.4rem; margin-bottom: 5px; font-weight: normal; }
+        .family-col p { font-size: 0.8rem; margin: 2px 0; color: var(--text-dark); line-height: 1.2; word-wrap: break-word; }
+        .family-label { font-weight: 700; text-transform: uppercase; font-size: 0.6rem; letter-spacing: 1px; color: var(--text-gray); display: block; margin-top: 8px; }
 
         /* Formulaire */
-        .wedding-card { background: white; padding: 35px 25px; margin-top: 40px; border: 1px solid var(--line-color); box-shadow: 0 10px 40px rgba(0,0,0,0.06); text-align: left; }
-        .form-group { margin-bottom: 20px; }
-        .form-group label { display: block; margin-bottom: 8px; font-weight: 700; color: var(--text-dark); text-transform: uppercase; font-size: 0.75rem; letter-spacing: 1px; font-family: 'Montserrat', sans-serif; }
+        .wedding-card { background: white; padding: 25px 20px; margin-top: 30px; border: 1px solid var(--line-color); text-align: left; }
+        .form-group { margin-bottom: 15px; }
+        .form-group label { display: block; margin-bottom: 5px; font-weight: 700; color: var(--text-dark); text-transform: uppercase; font-size: 0.7rem; letter-spacing: 1px; font-family: 'Montserrat', sans-serif; }
         .required::after { content: " *"; color: var(--rose-prestige); }
-        input, select, textarea { width: 100%; padding: 14px; border: 1px solid #e0e0e0; font-family: 'Cormorant Garamond', serif; font-size: 1.1rem; border-radius: 0; outline: none; }
-        input:focus { border-color: var(--rose-prestige); }
-        hr { border: 0; border-top: 1px solid #eee; margin: 25px 0; }
-        .btn-action { background: var(--text-dark); color: white; border: none; padding: 18px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 3px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
-        .btn-action:hover { background: var(--rose-prestige); }
+        input, select, textarea { width: 100%; padding: 12px; border: 1px solid #e0e0e0; font-family: 'Cormorant Garamond', serif; font-size: 1rem; border-radius: 0; outline: none; }
+        hr { border: 0; border-top: 1px solid #eee; margin: 20px 0; }
+        .btn-action { background: var(--text-dark); color: white; border: none; padding: 16px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; }
 
-        @media (max-width: 600px) { .family-grid { flex-direction: column; gap: 30px; } }
     </style>
 </head>
 <body>
@@ -75,7 +80,7 @@
 
 <div class="page-wrapper" id="accueil">
     <div class="main-frame">
-        <img src="logoES.png" alt="Logo" style="width: 80px;">
+        <img src="logoES.png" alt="Logo" style="width: 70px;">
         <h1 class="names">Eva & Samuel</h1>
 
         <img src="nez.JPG" alt="Eva & Samuel" class="hero-photo">
@@ -83,7 +88,7 @@
         <div class="event-card" id="mairie">
             <h2 class="section-title">Cérémonie Civile</h2>
             <span class="sub-text">Se diront « oui »</span>
-
+            
             <div class="date-block">
                 <span class="date-line">Mercredi 6 Mai 2026</span><br>
                 <span>à 14h30 précises</span>
@@ -104,7 +109,7 @@
                     <span class="family-label">Grands-parents</span>
                     <p>Jacqueline Levy et Huguette Soulat</p>
                     <span class="family-label" style="opacity: 0.7;">En mémoire de</span>
-                    <p style="font-style: italic; font-size: 0.85rem !important;">Roger Benoun Levy et Michel Soulat</p>
+                    <p style="font-style: italic;">Roger Benoun Levy et Michel Soulat</p>
                 </div>
 
                 <div class="family-col">
@@ -114,12 +119,12 @@
                     <span class="family-label">Grand-mère</span>
                     <p>Simone Msika</p>
                     <span class="family-label" style="opacity: 0.7;">En mémoire de</span>
-                    <p style="font-style: italic; font-size: 0.85rem !important;">Leurs chers disparus</p>
+                    <p style="font-style: italic;">Leurs chers disparus</p>
                 </div>
             </div>
 
-            <h2 class="section-title" style="margin-top: 20px;">La Houppa</h2>
-            <p style="margin-bottom: 25px; font-style: italic; font-size: 1.2rem;">
+            <h2 class="section-title" style="margin-top: 15px;">La Houppa</h2>
+            <p style="margin-bottom: 20px; font-style: italic; font-size: 1rem;">
                 Ont l’immense joie de vous faire part du mariage de leurs enfants et petits-enfants
             </p>
 
@@ -131,18 +136,13 @@
             <div class="info-block">
                 <span class="venue-name">Le White</span>
                 <span class="address-text">68 rue Louis Ampère, 93330 Neuilly sur Marne</span>
-                <p style="margin-top: 15px; font-style: italic; color: var(--rose-prestige); font-size: 0.95rem;">
-                    La cérémonie sera suivie d'une soirée de célébration
-                </p>
             </div>
         </div>
 
         <img src="verre.JPG" alt="Célébration" class="section-photo">
 
         <div class="wedding-card" id="rsvp">
-            <h2 class="section-title" style="text-align: center; font-size: 1.8rem; letter-spacing: 2px;">Confirmation</h2>
-            <p style="text-align: center; font-style: italic; margin-bottom: 30px; color: #666; font-size: 0.95rem;">Réponse souhaitée avant le 1er Avril 2026</p>
-
+            <h2 class="section-title" style="text-align: center; font-size: 1.6rem;">Confirmation</h2>
             <form id="rsvpForm">
                 <div class="form-group">
                     <label class="required">Nom & Prénom</label>
@@ -150,30 +150,29 @@
                 </div>
                 <hr>
                 <div class="form-group">
-                    <label class="required">Présence à la Mairie ? (6 mai)</label>
+                    <label class="required">Présence à la Mairie ?</label>
                     <select name="pres_m" id="pres_m" onchange="toggleM()" required>
                         <option value="" disabled selected>Choisissez</option>
-                        <option value="oui">OUI, avec plaisir</option>
-                        <option value="non">NON, avec regret</option>
+                        <option value="oui">OUI</option>
+                        <option value="non">NON</option>
                     </select>
                 </div>
-                <div id="sec_m" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 15px;">
+                <div id="sec_m" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <div class="form-group"><label>Nombre d'adultes</label><input type="number" name="ad_m" min="1" value="1"></div>
                 </div>
                 <hr>
                 <div class="form-group">
-                    <label class="required">Présence à la Houppa ? (12 mai)</label>
+                    <label class="required">Présence à la Houppa ?</label>
                     <select name="pres_h" id="pres_h" onchange="toggleH()" required>
                         <option value="" disabled selected>Choisissez</option>
-                        <option value="oui">OUI, avec plaisir</option>
-                        <option value="non">NON, avec regret</option>
+                        <option value="oui">OUI</option>
+                        <option value="non">NON</option>
                     </select>
                 </div>
-                <div id="sec_h" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 15px;">
+                <div id="sec_h" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <div class="form-group"><label>Nombre d'adultes</label><input type="number" name="ad_h" min="1" value="1"></div>
                 </div>
                 <hr>
-                <div class="form-group"><label>Un mot pour les mariés ?</label><textarea name="msg" rows="3" placeholder="Votre message..."></textarea></div>
                 <button type="submit" id="subBtn" class="btn-action">Envoyer ma réponse</button>
             </form>
         </div>
@@ -181,16 +180,8 @@
 </div>
 
 <script>
-    function toggleM() {
-        const select = document.getElementById('pres_m');
-        const section = document.getElementById('sec_m');
-        section.style.display = (select.value === 'oui') ? 'block' : 'none';
-    }
-    function toggleH() {
-        const select = document.getElementById('pres_h');
-        const section = document.getElementById('sec_h');
-        section.style.display = (select.value === 'oui') ? 'block' : 'none';
-    }
+    function toggleM() { document.getElementById('sec_m').style.display = (document.getElementById('pres_m').value === 'oui') ? 'block' : 'none'; }
+    function toggleH() { document.getElementById('sec_h').style.display = (document.getElementById('pres_h').value === 'oui') ? 'block' : 'none'; }
 </script>
 
 </body>
