--- a/invitation.html
+++ b/invitation.html
@@ -25,9 +25,7 @@
         .page-wrapper { position: relative; z-index: 10; padding: 80px 10px 40px 10px; display: flex; flex-direction: column; align-items: center; }
         .main-frame { width: 100%; max-width: 600px; text-align: center; }
 
-        /* Style des noms Eva & Samuel insérés */
         .names-inline { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: clamp(2.5rem, 8vw, 3.5rem); margin: 5px 0; }
-        
         .section-title { font-family: 'Cormorant Garamond', serif; font-size: 1.8rem; text-transform: uppercase; letter-spacing: 3px; color: var(--text-dark); margin-bottom: 5px; }
 
         .hero-photo, .section-photo { width: 100%; max-width: 500px; border: 2px solid white; padding: 5px; background: white; margin: 20px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
@@ -39,6 +37,9 @@
         .address-text { font-style: italic; font-size: 1rem; color: var(--text-gray); }
 
         .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 30px 15px; margin: 20px 0; width: 100%; position: relative; }
+
+        /* Style pour l'image Hébreu */
+        .hebreu-img { width: 100%; max-width: 400px; margin: 0 auto 20px; display: block; filter: sepia(0.2); }
 
         .family-grid { display: flex; justify-content: space-between; gap: 10px; margin-bottom: 25px; text-align: center; border-bottom: 1px solid var(--line-color); padding-bottom: 20px; }
         .family-col { flex: 1; min-width: 0; }
@@ -86,6 +87,8 @@
         </div>
 
         <div class="event-card" id="houppa">
+            <img src="hebreu.png" alt="Bénédiction" class="hebreu-img">
+
             <div class="family-grid">
                 <div class="family-col">
                     <h3>Famille de la Kala</h3>
@@ -108,7 +111,6 @@
                 </div>
             </div>
 
-            <h2 class="section-title">La Houppa</h2>
             <div class="names-inline">Eva & Samuel</div>
             
             <p style="margin-bottom: 20px; font-style: italic; font-size: 1rem;">
