--- a/invitation.html
+++ b/invitation.html
@@ -111,7 +111,8 @@
                     <span class="family-label">Grand-mère</span>
                     <p>Simone Msika</p>
                     <span class="family-label" style="opacity: 0.7;">En mémoire de</span>
-                    <p style="font-style: italic;">Leurs chers disparus</p>
+                    <p style="font-style: italic;">Claude Nessim Msika</p>
+                    <p style="font-style: italic;">Thérèse Esther et Jacques Isaac Uzan</p>
                 </div>
             </div>
 
